--- a/hello-world-docker-action/action.yml
+++ b/hello-world-docker-action/action.yml
@@ -1,4 +1,4 @@
-name: 'Hello World'
+name: 'Hello World 1'
 description: 'Greet someone and record the time'
 inputs:
   who-to-greet:  # id of input
